# fastmcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile_old  README.md  bitbucket-pipelines.yml  bitbucket-pipelines1.yml  bitbucket-pipelines2.yml  bitbucket-pipelines3.yml  docker-compose.yml  docker-compose_feature_branch.yml  docker-compose_staging.yml  docker-compose_test.yml  payload_v4.json  pyproject.toml  requirements.txt  run.py  script_mcp.py  server.py
.junie/: guidelines.md
app/api/: app.py
app/api/Integration_SM/: ModelAPI.py  ResponseModelAPI.py  app.py
app/api/WebHookZoho/: app.py
app/api/v1/Integration_SM/: app.py
app/api/v1/PasarelaPagoMS/: app.py
app/api/v2/Integration_SM/: app.py
app/api/v2/PasarelaPagoMS/: app.py
app/api/v3/Integration_SM/: app.py
app/api/v4/Integration_SM/: app.py
app/api/v5/Integration_SM/: app.py
app/mcp/: auth.py  client.py  exceptions.py  schemas.py  server.py
app/mcp/tools/: __init__.py  consultar_cotizacion.py  consultar_persona.py  consultar_poliza.py
app/middlewares/: ConfigureMiddleware.py  ErrorMiddleware.py  LoggingMiddleware.py  ProcessTimeHeaderMiddleware.py  __init__.py  verify_api_key.py
app/schemas/WebHookZoho/: ModelRequest.py
app/schemas/v1/Integration_SM/: ModelAPI.py  ResponseModelAPI.py
app/schemas/v1/PasarelaPagoMS/: ModelAPI.py  ResponseModelAPI.py
app/schemas/v2/Integracion_SM/: ModelRequestBase.py  ModelResponseBase.py
app/schemas/v3/Integracion_SM/: ModelRequestBase.py
app/schemas/v4/Integracion_SM/: ModelRequestBase.py
app/schemas/v5/Integracion_SM/: ModelRequestBase.py
app/utils/: AsyncHttpx.py  configs.py  constants.py  payload_templates.py
app/utils/v1/: AsyncHttpx.py  ExternalApis.py  LoggerSingleton.py  MongoDBHandler.py  configs.py  constants.py  database.py  messages_error.py  payload_templates.py  regular_expressions.py
app/utils/v2/: LoggerSingletonDB.py  SyncHttpx.py  mockup_response_cotizacion.py  payload_templates.py
app/utils/v3/: payload_templates.py
app/utils/v5/: payload_templates.py
docs/: ARCHITECTURE.md  ARCHITECTURE_C4_3_COMPONENTS.md  REPORT.md
tests/: configtest.py  test_api.py  test_schemas.py
tests/test_mpc/: conftest.py  test_server.py  test_tools.py
