[tool.poetry]
name = "integration-seguros-mercantil"
version = "0.1.0"
description = ""
authors = ["Ernesto Crespo <ernesto@asistensi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = {extras = ["all"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.7.4"}
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
pymongo = "^4.8.0"
loguru = "^0.7.2"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
