[project]
authors = [
    {name = "Ernesto Crespo", email = "ernesto@asistensi.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "fastapi[all]<1.0.0,>=0.111.0",
    "uvicorn[all]<1.0.0,>=0.30.1",
    "pydantic[email]<3.0.0,>=2.7.4",
    "python-dotenv<2.0.0,>=1.0.1",
    "pyjwt<3.0.0,>=2.8.0",
    "python-multipart<1.0.0,>=0.0.9",
    "pymongo<5.0.0,>=4.8.0",
    "loguru<1.0.0,>=0.7.2",
    "passlib<2.0.0,>=1.7.4",
    "httpx<1.0.0,>=0.27.0",
    "requests<3.0.0,>=2.32.3",
    "tenacity<10.0.0,>=9.0.0",
]
name = "integration-seguros-mercantil"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "pre-commit<5.0.0,>=4.0.1",
]
